ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Always_Rollup_to_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>npo02__Always_Rollup_to_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, Salesforce will ALWAYS roll up donor data to the Opportunity&apos;s Primary Contact, and corresponding Household Account or record, even if the Opportunity is not from an individual. If left unselected, only the organization will receive credit.</description>
    <inlineHelpText>Always rollup to the primary contact, and corresponding household, on an opp. even if the opportunity is not from an individual (i.e. from a company, foundation, etc.)</inlineHelpText>
    <label>Always Rollup to Primary Contact Role</label>
    <type>Checkbox</type>
</CustomField>