ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__DISABLE_HouseholdAfter_trigger__c.field-meta.xml
<CustomField>
    <fullName>npo02__DISABLE_HouseholdAfter_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>!!WARNING!!
DISABLES the HouseholdAfter.trigger (Household__c, after update)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP.  FOR ADVANCED CONSULTANT AND DEVELOPERS ONLY.</inlineHelpText>
    <label>DEPRECATED-Disable_HHAfter_trigger</label>
    <type>Checkbox</type>
</CustomField>