ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__DISABLE_Households_trigger__c.field-meta.xml
<CustomField>
    <fullName>npo02__DISABLE_Households_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>!!WARNING!!
DISABLES the Households.trigger (Contact, after insert, after update, after delete)
- checking this box will disable a trigger.  This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
    <label>DEPRECATED-Disable_Households_trigger</label>
    <type>Checkbox</type>
</CustomField>