ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Enable_Opp_Rollup_Triggers__c.field-meta.xml
<CustomField>
    <fullName>npo02__Enable_Opp_Rollup_Triggers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>Check this box to update opportunity totals whenever opportunities are inserted or updated (as long as capacity allows).</inlineHelpText>
    <label>DEPRECATED-Enable_Opp_Rollup_Triggers</label>
    <type>Checkbox</type>
</CustomField>