ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Excluded_Account_Opp_Rectypes__c.field-meta.xml
<CustomField>
    <fullName>npo02__Excluded_Account_Opp_Rectypes__c</fullName>
    <description>Names of Opportunity Record Types to exclude from statistics when rolling up Account Opportunities.</description>
    <inlineHelpText>Names of opportunity record types to exclude when rolling up account opportunities. Separate record type names with semicolons.</inlineHelpText>
    <label>Opp RecTypes Excluded for Account Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>