ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Has_Package_Update__c.field-meta.xml
<CustomField>
    <fullName>npo02__Has_Package_Update__c</fullName>
    <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
    <label>DEPRECATED-Has Package Update</label>
    <length>40</length>
    <type>Text</type>
</CustomField>