ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_Member_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_Member_Contact_Role__c</fullName>
    <description>The Contact Role you want to use for Household Members.</description>
    <inlineHelpText>Select the Contact Role for Household Members</inlineHelpText>
    <label>Household Member Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>