ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_Rules__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_Rules__c</fullName>
    <description>Specifies which Contacts will have Households objects automatically created for them.  Note that this is only used for Contacts using the One-to-One or Individual Account Model.  This is ignored for Contacts with the Household Account Model.</description>
    <inlineHelpText>Select which Contacts get Households: All, only those related to an Individual Account, or none.</inlineHelpText>
    <label>Household Object Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>