ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Last_Update_Check__c.field-meta.xml
<CustomField>
    <fullName>npo02__Last_Update_Check__c</fullName>
    <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
    <label>DEPRECATED-Last Update Check</label>
    <type>DateTime</type>
</CustomField>