ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Soft_Credit_Roles__c.field-meta.xml
<CustomField>
    <fullName>npo02__Soft_Credit_Roles__c</fullName>
    <description>Opportunity Contact Roles you want to include in Soft Credit rollups. Control or Command click to select multiple roles.</description>
    <inlineHelpText>List of roles to include in soft credit rollups.</inlineHelpText>
    <label>Soft Credit Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>